AG-7380 fix options page styles
Merge in EXTENSIONS/vpn-extension from fix/AG-7380 to master

Squashed commit of the following:

commit 97f4640757631f53ff1461325fa3109ab5ccf4f1
Merge: ae88443e 9cff66c8
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Sep 1 13:51:02 2021 +0300

    Merge branch 'master' into fix/AG-7380

commit ae88443e8b6ef417dfee986126c32996265e3165
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Aug 18 19:19:15 2021 +0300

    fix options page styles

commit 9c8a7b815d1d239a28a69a5e5cd756d0c59a07c4
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Aug 18 18:22:03 2021 +0300

    fix Dns export

commit 5402c95943d3f2e465f403050e5697a6d233a096
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Aug 18 18:17:11 2021 +0300

    simplify html code for Dns component

--- a/src/options/components/App/app.pcss
+++ b/src/options/components/App/app.pcss
@@ -20,7 +20,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        margin: 0 0 60px;
+        margin: 0 0 64px;
         font-size: 3rem;
     }
 
