--- a/src/options/components/Exclusions/settings.pcss
+++ b/src/options/components/Exclusions/settings.pcss
@@ -18,7 +18,8 @@
 
     &__group {
         border-bottom: 1px solid var(--border-color);
-        padding: 20px 0;
+        margin-top: 20px;
+        padding-bottom: 20px;
 
         &:last-child {
             border-bottom-color: transparent;
@@ -112,7 +113,7 @@
     }
 
     &__item-desc {
-        margin: 5px 20px 20px 0;
+        margin: 5px 20px 0 0;
         font-size: 1.3rem;
         line-height: 1.2;
         color: var(--gray88);
@@ -212,4 +213,3 @@
         bottom: 0;
     }
 }
-
