--- a/src/options/components/Support/support.pcss
+++ b/src/options/components/Support/support.pcss
@@ -1,8 +1,8 @@
 .support-items {
     .support-item {
         display: flex;
+        margin-top: 16px;
         padding-bottom: 16px;
-        padding-top: 16px;
         align-items: center;
         cursor: pointer;
 
