--- a/src/options/components/ui/Switch/switch.pcss
+++ b/src/options/components/ui/Switch/switch.pcss
@@ -2,8 +2,7 @@
     position: relative;
     display: flex;
     align-items: center;
-    padding: 20px 15px 20px 0;
-    min-height: 70px;
+    padding-right: 15px;
 
     &__info {
         max-width: 500px;
